# jaraco.envs

./: .travis.yml  CHANGES.rst  NEWS.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: conf.py  index.rst
jaraco/: envs.py
jaraco/envs/: __init__.py
newsfragments/: +6a3f35d9.bugfix.rst  +d462d589.feature.rst
tests/: test_envs.py
